--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.3.0"
 description = "CLI tool for efficient video cutting with minimal recoding"
 readme = "README.md"
 requires-python = ">=3.11"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Santtu Keskinen", email = "santtu.keskinen@gmail.com"}
 ]
@@ -25,12 +25,10 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: Multimedia :: Video :: Non-Linear Editor",
     "Topic :: Multimedia :: Video :: Conversion",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Operating System :: OS Independent",
-    "Console Application",
 ]
 dependencies = [
     "numpy",
