Update readme and move distribution files under ./distribution

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ sm_cython/*/*.c
 *.fcpxml
 *.otio
 *.aaf
+
+# Flatpak build artifacts
+distribution/flatpak/build-dir/
+distribution/flatpak/repo/
+*.flatpak
+.flatpak-builder
