--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ select = [
     "PLR",    # pylint refactor
     "PLW",    # pylint warnings
     "RUF",    # ruff-specific rules
+    "ANN",    # type annotations
 ]
 
 # Ignore specific rules that are not relevant for this project
